# screener

./: .gitignore  CLAUDE.md  README.md  _bb_bounce_results.txt  _breakout_winners.txt  _combo_sweep_results.txt  _ema21_matrix.txt  _exit_combo_sweep.stdout  _exit_combo_sweep.txt  _exit_invalid_matrix.txt  autoresearch.py  autoresearch_loop.sh  autoresearch_strategies.py  justfile  main.py  matrix_results.txt  matrix_swing_results.txt  matrix_swing_results_nofilter.txt  pine_india.txt  pine_us.txt  pyproject.toml  run_exit_invalid_matrix.py  run_exit_sweep.py  run_matrix.py  run_pinescript_strategies.py  run_swing_matrix.py  serve_pine_results.py  validate_backtest.py  validate_backtest_prompt.md
.claude/commands/: analyze_journal.md  best_buys.md
screener/: __main__.py  backtest.py  cli.py  criteria.py  display.py  enrich.py  fundamentals.py  historical_backtest.py  historical_criteria.py  historical_exits.py  history.py  indicators.py  metrics.py  prices.py  rs_breakout.py  scanner.py  sectors.py  universes.py
screener/backtester/: __init__.py  data.py  display.py  engine.py  metrics.py  models.py  pine.py  portfolio.py  slippage.py  strategies.py
screener/universes/: __init__.py  nifty50.txt  nifty500.txt  sp500.txt
screener/unusual_volume/: __init__.py  buildup.py  classify.py  cli.py  delivery.py  detector.py  enrich.py  filters.py  output.py
tests/: conftest.py  test_cli.py  test_engine.py  test_historical_backtest.py  test_historical_criteria.py  test_history.py  test_history_orphans.py  test_indicator_parity.py  test_pine.py  test_pine_errors.py  test_realism_upgrades.py  test_rs_breakout.py  test_scanner.py  test_unusual_volume.py
