[project]
name = "screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tradingview-screener>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "openscreener",
    "yfinance>=0.2",
    "pyarrow>=15.0",
    "tvdatafeed",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
screener = "main:cli"
