[project]
name = "screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tradingview-screener>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "openscreener",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15.0",
]

[project.scripts]
screener = "main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
